More fixes to make font-awesome icons appear on the same baseline as text whether form or title is visible

--- a/src/components/shoppingListForm/shoppingListForm.module.css
+++ b/src/components/shoppingListForm/shoppingListForm.module.css
@@ -24,6 +24,7 @@
 .fa {
   color: var(--text-color);
   font-size: 17px;
+  margin-bottom: -2px;
 }
 
 .fa:hover {
